[package]
edition = "2021"
name = "audited_macros"
version = "0.1.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-syn-parse = "0.1.5"
ed25519-dalek = "1.0.1"
proc-macro2 = "1"
quote = "1"
syn = {version = "1", features = ["full"]}
